--- a/src/assets/css/black-dashboard-react.css
+++ b/src/assets/css/black-dashboard-react.css
@@ -90,7 +90,7 @@ body {
   line-height: 1.5;
   color: #525f7f;
   text-align: left;
-  background-color: #1e1e2f;
+  background-color: #0606eb;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
