--- a/src/assets/scss/black-dashboard-react/custom/cards/_card-map.scss
+++ b/src/assets/scss/black-dashboard-react/custom/cards/_card-map.scss
@@ -21,6 +21,13 @@
   // }
 }
 
+.card-footer {
+  input {
+    height: 54px !important;
+    width: 54px !important;
+  }
+}
+
 // .col-md-10 {
 //   .form-control {
 //     padding: 5;
